RESOLVED FIXED200013
[iOS] [WK1] UIWebView always jumps to the top left corner when scrolling to reveal the selection
https://bugs.webkit.org/show_bug.cgi?id=200013
Summary [iOS] [WK1] UIWebView always jumps to the top left corner when scrolling to r...
Wenson Hsieh
Reported 2019-07-22 13:40:46 PDT
Attachments
Patch (15.87 KB, patch)
2019-07-22 13:59 PDT, Wenson Hsieh
no flags
Patch (15.75 KB, patch)
2019-07-22 14:07 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-07-22 13:59:35 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2019-07-22 14:07:22 PDT
EWS Watchlist
Comment 3 2019-07-22 14:09:21 PDT
Attachment 374629 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/ios/UIKitSPI.h:45: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
Wenson Hsieh
Comment 4 2019-07-22 15:06:08 PDT
Comment on attachment 374629 [details] Patch Thanks for the review!
WebKit Commit Bot
Comment 5 2019-07-22 15:14:54 PDT
Comment on attachment 374629 [details] Patch Clearing flags on attachment: 374629 Committed r247702: <https://trac.webkit.org/changeset/247702>
WebKit Commit Bot
Comment 6 2019-07-22 15:14:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.